--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "postcss-env-function": "^2.0.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-lazyload": "^2.6.2",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
