--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "postcss": "^7.0.18",
     "postcss-env-function": "^2.0.2",
     "react": "^16.10.2",
+    "react-bootstrap": "^1.0.0-beta.14",
+    "react-cookie": "^4.0.1",
     "react-dom": "^16.10.2",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.0.5",
     "react-lazyload": "^2.6.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
