--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
     "postcss": "^7.0.18",
     "postcss-env-function": "^2.0.2",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-circular-progressbar": "^2.0.2",
     "react-dom": "^16.10.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
