--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,8 @@
   "rules": {
     "react/jsx-filename-extension": 0,
     // "function-paren-newline": 0
-    "react/state-in-constructor": 0
+    "react/state-in-constructor": 0,
+    "jsx-a11y/no-static-element-interactions": 0,
+    "jsx-a11y/click-events-have-key-events": 0
   }
 }
