--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.10.2",
     "react-circular-progressbar": "^2.0.2",
     "react-dom": "^16.10.2",
+    "react-overdrive": "0.0.10",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
