--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "dotenv": "^8.2.0",
     "node-sass": "^4.13.0",
     "postcss": "^7.0.18",
     "prop-types": "^15.7.2",
