--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
     "@fortawesome/pro-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
     "axios": "^0.19.0",
+    "country-language": "^0.1.7",
     "dotenv": "^8.2.0",
     "node-sass": "^4.13.0",
     "postcss": "^7.0.18",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-circular-progressbar": "^2.0.2",
+    "react-country-flag": "^1.1.0",
     "react-dom": "^16.10.2",
     "react-overdrive": "0.0.10",
     "react-rating": "^2.0.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-tooltip": "^3.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
