--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.0",
     "country-language": "^0.1.7",
     "dotenv": "^8.2.0",
+    "flag-icon-css": "^3.4.5",
     "node-sass": "^4.13.0",
     "postcss": "^7.0.18",
     "prop-types": "^15.7.2",
