--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react": "^16.10.2",
     "react-circular-progressbar": "^2.0.2",
     "react-dom": "^16.10.2",
+    "react-infinite-scroller": "^1.2.4",
+    "react-lazy-load": "^3.0.13",
     "react-overdrive": "0.0.10",
     "react-rating": "^2.0.0",
     "react-router": "^5.1.2",
