--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "country-language": "^0.1.7",
     "dotenv": "^8.2.0",
     "flag-icon-css": "^3.4.5",
+    "js-cookie": "^2.2.1",
+    "jwt-decode": "^2.2.0",
     "node-sass": "^4.13.0",
     "postcss": "^7.0.18",
     "prop-types": "^15.7.2",
