--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "country-language": "^0.1.7",
     "dotenv": "^8.2.0",
     "flag-icon-css": "^3.4.5",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "postcss": "^7.0.18",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
@@ -24,7 +24,7 @@
     "react-rating": "^2.0.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.3.1",
     "react-tooltip": "^3.11.1"
   },
   "scripts": {
