--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "flag-icon-css": "^3.4.5",
     "js-cookie": "^2.2.1",
     "jwt-decode": "^2.2.0",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "postcss": "^7.0.18",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-circular-progressbar": "^2.0.2",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.10.2",
     "react-infinite-scroller": "^1.2.4",
     "react-lazy-load": "^3.0.13",
@@ -27,7 +28,7 @@
     "react-rating": "^2.0.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.4.0",
     "react-tooltip": "^3.11.1"
   },
   "scripts": {
@@ -52,7 +53,7 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^6.1.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-node": "^4.0.0",
     "eslint-config-prettier": "^6.5.0",
